# PennaceousFeathersRendering

./: .gitignore  .gitmodules  README.md
feather_plugin/include/render/: bsdf.h
feather_plugin/src/bsdfs/: barbs.h  barbules.h  feather.cpp  feather.h  feather_mask.h  fiber_math_utils.h  fiber_tracer.cpp  flatland.h  math-array.h  pigmentation.cpp  pigmentation.h  twosided.cpp
feather_plugin/src/integrators/fiber_path/: fiber_path.cpp
installation/: config.py
masking/: CMakeLists.txt  External.cmake  Paths.cmake  barb-masking.h  barb-range.h  barbs-mc.h  barbs-opaque.h  barbs.h  barbule-masking.h  barbules-mc.h  barbules.h  feather-base.h  feather-masking.h  feather-mc.h  feather.h  flatland.h
masking/main/: barb-masking.cc  barbule-masking.cc  colors.h  htest.cc  plot-barbs.cc  plot-barbules.cc  plot-feathers.cc  svg-barbs.h  svg-barbules.h  test-projection.cc
masking/scripts/: generate-figures.sh  generate-masking-paper-figures.sh  htest.sh  svg2png-all.sh
